	MIME types, not just text/plain.

	* esxx.include now takes a secondary argument, scope, which
	can be used to specify in what scope the included file should 
	be evaluated in.  If unspecified, the global scope is used
	just like before.

	* When using esxx.include from a function, files are now
	first resolved relative the working directory.

	* esxx.global is now available, and refers to the global scope.

0.9.20081101
	* Bug fixes as usual.

	* Upgraded to Rhino 1.7 release 2 PRERELEASE 2008 09 30, so we
	can extend abstract Java classes, which didn't work in 1.7r1.

	* esxx.document can now be modified.

	* Enabled a proper https URI implementation.

	* New esxx.wait signature: esxx.wait(mutex, timeout,
	function), which waits on mutex until function returns true.

	* The URI constructor now allows {...} syntax and a parameter
	object to automatically build proper URIs. The file URI class
	will also refuse URIs with encoded path separators in then.

	* The Request object now has requestURI, scriptURI, scriptName
	and pathInfo properties.

	* Request.query now only contains parameters from the
	URI. 'application/x-www-form-urlencoded'-encoded data is now
	in Request.message.

	* Added Request.contentType, which contains the basic content
	type (without parameters).

	* The application's error handler may now return null or
	undefined to make it act as if there were not error handler
	installed at all.

	* Added esxx/Object.js include file, which adds extras to the
	Object class. Currently, it only adds $(), which can be used
	to sanitize the 'this' variable in closures.

	* Added --no-handler option, for web servers that invoke
	FastCGI servers without an extra file type handler, such as
	lighttpd.

	* Embedded H2 updated to 1.1.102, 2008-10-24.

	* The stylesheets are now independent from the applications
	and may be viewed and unloaded via JMX. It's also possible to 
	view runtime statistics of individual stylesheets.
